--- a/package.json
+++ b/package.json
@@ -11,8 +11,11 @@
   "dependencies": {
     "@vercel/analytics": "^1.0.2",
     "axios": "^1.4.0",
-    "framer-motion": "^10.12.18",
+    "class-variance-authority": "^0.7.0",
+    "clsx": "^2.1.1",
+    "framer-motion": "^10.18.0",
     "he": "^1.2.0",
+    "lucide-react": "^0.428.0",
     "mongoose": "^7.4.0",
     "next": "^13.3.0",
     "nodemailer": "^6.9.4",
@@ -23,7 +26,11 @@
     "react-responsive-carousel": "^3.2.23",
     "react-responsive-masonry": "^2.1.7",
     "react-simple-typewriter": "^5.0.1",
-    "react-syntax-highlighter": "^15.5.0"
+    "react-syntax-highlighter": "^15.5.0",
+    "react-text-gradients": "^1.0.2",
+    "react-type-animation": "^3.2.0",
+    "tailwind-merge": "^2.5.2",
+    "tailwindcss-animate": "^1.0.7"
   },
   "devDependencies": {
     "autoprefixer": "^10.4.14",
